Implemented JUnit and the first batch of tests